# molmoact2-so101-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
collect/: collect_demos.py  make_variants.py  measure_gripper.py
configs/: train_v5_bingrip.sh
docs/: TROUBLESHOOTING.md  index.html
eval/: eval_policy.py
evidence/: README.md  libero_facts.json  libero_prompt_decoded.txt  ours_facts.json  ours_prompt_decoded.txt
src/molmoact2_so101_sim/: __init__.py  adapter.py  calibration.py  contracts.py  realism.py
src/molmoact2_so101_sim/assets/: README.md
tests/: conftest.py  test_adapter.py  test_calibration.py  test_contracts.py  test_release_smoke.py
tools/: generate_wood_texture.py
